--- a/web/index.html
+++ b/web/index.html
@@ -757,7 +757,7 @@
                                         class="px-3 py-2 text-xs font-medium rounded-lg transition-colors cursor-pointer whitespace-nowrap flex items-center gap-1.5">
                                     待确认
                                     <span x-show="getSessionStatusCount('pending_review') > 0"
-                                          class="inline-flex items-center justify-center min-w-[18px] h-[18px] px-1 rounded-full text-[10px] font-semibold bg-white/80 text-amber-700"
+                                          class="inline-flex items-center justify-center min-w-[20px] h-5 px-1.5 rounded-full text-[11px] font-semibold bg-white border border-amber-200 text-amber-700"
                                           x-text="getSessionStatusCount('pending_review')"></span>
                                 </button>
                                 <button @click="sessionStatusFilter = 'completed'; filterSessions()"
@@ -879,7 +879,7 @@
                                             <div class="flex items-start justify-end w-full pt-7">
                                                     <button @click.stop="confirmDeleteSession(session.session_id)"
                                                             x-show="!sessionBatchMode"
-                                                            class="p-1.5 text-gray-300 hover:text-danger hover:bg-red-50 rounded-md transition-colors cursor-pointer sm:opacity-0 sm:pointer-events-none sm:group-hover:opacity-100 sm:group-hover:pointer-events-auto"
+                                                            class="p-1.5 text-gray-400 hover:text-danger hover:bg-red-50 rounded-md transition-colors cursor-pointer sm:opacity-0 sm:pointer-events-none sm:group-hover:opacity-100 sm:group-hover:pointer-events-auto"
                                                             aria-label="删除会话">
                                                         <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -914,7 +914,7 @@
                             <!-- 空状态：无搜索结果 -->
                             <template x-if="filteredSessions.length === 0 && sessions.length > 0">
                                 <div class="text-center py-12 bg-surface border border-border rounded-xl">
-                                    <svg class="w-16 h-16 mx-auto text-gray-200 mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <svg class="w-16 h-16 mx-auto text-gray-300 mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"/>
                                     </svg>
                                     <h3 class="text-lg font-medium text-gray-600 mb-2">未找到匹配的会话</h3>
@@ -929,7 +929,7 @@
                             <!-- 空状态：无会话 -->
                             <template x-if="sessions.length === 0">
                                 <div class="text-center py-16 bg-surface border border-border rounded-xl">
-                                    <svg class="w-20 h-20 mx-auto text-gray-200 mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <svg class="w-20 h-20 mx-auto text-gray-300 mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1"
                                               d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"/>
                                     </svg>
@@ -1986,7 +1986,7 @@
                             </template>
                             <template x-if="filteredReports.length === 0">
                             <div class="text-center py-16 bg-surface border border-border rounded-xl">
-                                <svg class="w-20 h-20 mx-auto text-gray-200 mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <svg class="w-20 h-20 mx-auto text-gray-300 mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1"
                                           d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"/>
                                 </svg>
@@ -2449,8 +2449,8 @@
                         </button>
                         <button data-guide="guide-start" type="submit"
                                 :disabled="!newSessionTopic.trim()"
-                                :class="newSessionTopic.trim() ? 'btn-sage-blue cursor-pointer' : 'bg-gray-300 cursor-not-allowed'"
-                                class="px-5 py-2.5 text-white rounded-lg font-medium transition-colors duration-200">
+                                :class="newSessionTopic.trim() ? 'btn-sage-blue text-white cursor-pointer' : 'report-action-disabled cursor-not-allowed'"
+                                class="px-5 py-2.5 rounded-lg font-medium transition-colors duration-200">
                             开始访谈
                         </button>
                     </div>
@@ -2549,8 +2549,8 @@
                     <button type="button"
                             @click="saveCustomScenario()"
                             :disabled="savingCustomScenario || !customScenario.name.trim()"
-                            :class="savingCustomScenario || !customScenario.name.trim() ? 'bg-gray-300 cursor-not-allowed' : 'btn-sage-blue cursor-pointer'"
-                            class="px-4 py-2 text-white rounded-lg font-medium transition-colors flex items-center gap-2">
+                            :class="savingCustomScenario || !customScenario.name.trim() ? 'report-action-disabled cursor-not-allowed' : 'btn-sage-blue text-white cursor-pointer'"
+                            class="px-4 py-2 rounded-lg font-medium transition-colors flex items-center gap-2">
                         <template x-if="savingCustomScenario">
                             <svg class="w-4 h-4 animate-spin" fill="none" viewBox="0 0 24 24">
                                 <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
@@ -2615,8 +2615,8 @@
                         <button type="button"
                                 @click="generateScenarioWithAi()"
                                 :disabled="aiGenerating || !aiScenarioDescription.trim()"
-                                :class="aiGenerating || !aiScenarioDescription.trim() ? 'bg-gray-300 cursor-not-allowed' : 'btn-sage-blue cursor-pointer'"
-                                class="px-5 py-2 text-white rounded-lg font-medium transition-colors flex items-center gap-2">
+                                :class="aiGenerating || !aiScenarioDescription.trim() ? 'report-action-disabled cursor-not-allowed' : 'btn-sage-blue text-white cursor-pointer'"
+                                class="px-5 py-2 rounded-lg font-medium transition-colors flex items-center gap-2">
                             <template x-if="aiGenerating">
                                 <svg class="w-4 h-4 animate-spin" fill="none" viewBox="0 0 24 24">
                                     <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
@@ -2670,7 +2670,7 @@
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4 12H3m3.343-5.657l-.707-.707m2.828 9.9a5 5 0 117.072 0l-.548.547A3.374 3.374 0 0014 18.469V19a2 2 0 11-4 0v-.531c0-.895-.356-1.754-.988-2.386l-.548-.547z"/>
                             </svg>
                             <span class="text-sm font-medium text-[#357BE2]">AI 设计说明</span>
-                            <span x-show="!aiExplanationExpanded" class="text-xs text-blue-400 ml-auto">点击展开</span>
+                            <span x-show="!aiExplanationExpanded" class="text-xs text-blue-600 ml-auto">点击展开</span>
                         </button>
                         <div class="ai-explain-collapse" :class="aiExplanationExpanded ? 'ai-explain-open' : ''">
                             <div>
@@ -2794,8 +2794,8 @@
                     <button type="button"
                             @click="saveAiGeneratedScenario()"
                             :disabled="savingCustomScenario || !aiGeneratedPreview?.name?.trim()"
-                            :class="savingCustomScenario || !aiGeneratedPreview?.name?.trim() ? 'bg-gray-300 cursor-not-allowed' : 'btn-sage-blue cursor-pointer'"
-                            class="px-5 py-2 text-white rounded-lg font-medium transition-colors flex items-center gap-2">
+                            :class="savingCustomScenario || !aiGeneratedPreview?.name?.trim() ? 'report-action-disabled cursor-not-allowed' : 'btn-sage-blue text-white cursor-pointer'"
+                            class="px-5 py-2 rounded-lg font-medium transition-colors flex items-center gap-2">
                         <template x-if="savingCustomScenario">
                             <svg class="w-4 h-4 animate-spin" fill="none" viewBox="0 0 24 24">
                                 <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
@@ -3172,7 +3172,7 @@
                     </template>
                     <template x-if="!changelog || changelog.length === 0">
                         <div class="text-center py-8 text-muted">
-                            <svg class="w-12 h-12 mx-auto mb-3 text-gray-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <svg class="w-12 h-12 mx-auto mb-3 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2"/>
                             </svg>
                             <p>暂无更新日志</p>
